--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/AneeshBhatnagar/EthereumWebInterface#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "web3": "^1.0.0-beta.24",
     "web3admin": "^0.4.4"
