--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "web3": "^1.0.0-beta.24",
+    "web3": "0.19.0",
     "web3admin": "^0.4.4"
   }
 }
